--- a/views/mainpage.erb
+++ b/views/mainpage.erb
@@ -8,5 +8,7 @@
       <input name="realpassword" /><br> 
       <input type="submit" />
     </form></a>
+<p> <%=@loginresult %> </p>
+
   </body>
 </html>
