--- a/views/shouter.erb
+++ b/views/shouter.erb
@@ -14,16 +14,14 @@
     </form></a>
     
     <p>
-    Here is your handle! Remember it! <%=@user.handle %>
-    </p> <p>
-    Here is your password! Remember it! <%=@user.password %>
     </p>
 
 
 
 
-    </p>
-    <a href="/login">Got to login page</a>
+    <p>
+    If you created one already
+    <a href="/loginpage">Got to login page</a>
     </p>
   </body>
 </html>
@@ -32,7 +30,3 @@
 
 
 
- <!-- 
-
-#       <input type="checkbox" name="first_programming_experience" value = "Yes"/> or No <input type="checkbox" name="first_programming_experience" value = "False"/><br>  <%=@user.password %>
- -->
