--- a/views/showpassword.erb
+++ b/views/showpassword.erb
@@ -1,17 +1,7 @@
 <html>
   <body>
-    <h1> Sign-up Page </h1>
-
-  <p> Please sign your name below</p>
+    <h4> Password </h4>
     
-
-    <form action="/signup" method="post">
-      <input name="name" />
-      <input type="submit" />
-    </form>
-
-
-
 
 
   </body>
