--- a/views/showpassword.erb
+++ b/views/showpassword.erb
@@ -1,7 +1,9 @@
 <html>
-  <body>
-    <h4> Password </h4>
-    
+  <body >
+    <h4> Your password is: </h4>
+    <p> <%=@password %> </p>
+
+	<p> Remember it in 5 seconds! </p>
 
 
   </body>
