newest commit, login works

--- a/views/mainpage.erb
+++ b/views/mainpage.erb
@@ -1,14 +1,11 @@
 <html>
-  <body style="text-align: center">
-    <h3> Please enter your handle here: </h3>    
-      <form action="/login" method="post">
-        Enter handle
-      <input name="handle" /><br>
-        Enter correct password: 
-      <input name="realpassword" /><br> 
+  <body style="text-align: center">    
+      <form action="/mainpage" method="shout">
+        Enter SHOUT
+      <input name="message" /><br>
       <input type="submit" />
-    </form></a>
-<p> <%=@loginresult %> </p>
 
+
+    </form></a>
   </body>
 </html>
