--- a/views/showpassword.erb
+++ b/views/showpassword.erb
@@ -1,9 +1,9 @@
 <html>
   <body >
-    <h4> Your password is: </h4>
-    <p> <%=@password %> </p>
+    <h4> Remember your password: </h4>
+    <p> <%= @password %> </p>
 
-	<p> Remember it in 5 seconds! </p>
+	<p> Now login with the password <a href="/loginpage">here</a></p>
 
 
   </body>
